kubernetes/management/cloudnative-pg/manifests/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: cnpg-system
  labels:
    backups.kalexlab.xyz/provision: "true"
